# vvspy

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  cspell.json  mkdocs.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py
.github/: CODEOWNERS  issue_label_bot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature.md  feature.yaml
.github/workflows/: BasicCheckup.yml  BasicCheckup_master.yml  codeql.yaml  lint.yml  pytest.yaml  release.yml  tests.yml  unittests.yml  unittests_master.yml
data/: parser.py  vvs_haltestellen.csv  vvs_steige.csv
data/mock_results/: arrival_request_400.json  departure_request_200.json  departure_request_400.json  trip_request_200.json
data/station_infos/: vvs_steige.csv
docs/: examples.md  functions.md  help.md  index.md  introduction.md  license.md  models.md  obj.md  requirements.txt  requirements_docs.txt  utils.md
docs/examples/: departures.ipynb  index.md  trips.ipynb
docs/source/: apireference.rst  conf.py  help.rst  index.rst  introduction.rst  license.rst  requestreference.rst
docs/vvspy/: functions.md  index.md  models.md  utils.md
examples/: check_delays_on_trip.py  display_of_incoming_departures.py
src/: __init__.py  departures.py  test.json  trip.py
station_infos/: vvs_data.csv  vvs_haltestellen.csv
tests/: run_tests.bat  run_tests.sh  start.py  test_functions.py  test_parser.py  test_utils.py
tests/e2e/: __init__.py  arrivals.py  departures.py  trips.py
tests/mock_results/: arrival_request_200.json  arrival_request_400.json  departure_request_200.json  departure_request_400.json  trip_request_200.json  trip_request_400.json
tests/unittests/: __init__.py  parser.py
vvs/: departures.py
vvspy/: __init__.py  arrivals.py  departures.py  trip.py  trips.py
vvspy/enums/: __init__.py  stations.py
vvspy/models/: __init__.py  arrival.py  connection.py  departure.py  destination.py  line_operator.py  origin.py  serving_line.py  transportation.py  trip.py
vvspy/utils/: __init__.py  get_request.py
