[tool.poetry]
name = "vvspy"
version = "1.2.0"
description = "API Wrapper for VVS (Verkehrsverbund Stuttgart)"
repository = "https://github.com/zaanposni/vvspy"
documentation = "https://vvspy.readthedocs.io/en/latest/"
authors = ["zaanposni <github@zaanposni.com>"]
keywords = [
  "VVS",
  "API",
  "STUTTGART",
  "WRAPPER",
  "JSON",
  "REST",
  "EFA",
  "PYTHON",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "vvspy" }]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
types-requests = "^2.28.11.2"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.10.0" }
pylint = { version = "^2.15.3", python = ">=3.7.2" }
isort = "^5.10.1"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
mypy = "^0.982"

[tool.poetry.group.docs.dependencies]
mkdocs = { extras = ["python"], version = "^1.4.1" }
mkdocs-material = "^8.5.6"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-autorefs = "^0.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
pymdown-extensions = "^9.8"

[tool.mypy]
mypy_path = 'vvspy'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | \.venv
  | docs
  | data
  | \.coveragerc
  | \.editorconfig
  | \.flake8
  | \.cspell.json
  | \.lock
  | \.toml
  | __pycache__
  | \.txt
)/
'''

[tool.isort]
profile = "black"

[tool.pylint]
disable = "missing-module-docstring, broad-except, missing-class-docstring"
max-line-length = 120

[tool.pytest]
testpaths = "test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
